--- a/styles/paperView.css
+++ b/styles/paperView.css
@@ -11,7 +11,7 @@
 
 #body {
 	width: 95%;
-	margin: 0 auto;
+	margin: 0 auto !important;
 }
 
 #container {
@@ -20,7 +20,8 @@
 
 #main {
 	width: 100%;
-	margin: 0;
+	padding: 20px 20px 10px 20px !important;
+	margin-top: 50px !important;
 }
 
 #main h2 {
