--- a/plugins/generic/listOfAttendees/listOfAttendees.css
+++ b/plugins/generic/listOfAttendees/listOfAttendees.css
@@ -1,11 +1,19 @@
 ul#listOfAttendees {
 	list-style: none;
 	padding-left: 0;
-	columns: 2;
-  -webkit-columns: 2;
-  -moz-columns: 2;
 }
 
 ul#listOfAttendees li {
 	margin-bottom: 1em;
+}
+
+ul#listOfAttendees img {
+	float: left;
+	margin-right: 1em;
+	margin-bottom: 1em;
+}
+
+ul#listOfAttendees .separator {
+	clear: both;
+	border-bottom: 1px solid #D9D9D9;
 }
