--- a/plugins/themes/eth/eth.css
+++ b/plugins/themes/eth/eth.css
@@ -122,6 +122,11 @@ select.selectMenu,
 textarea.textArea,
 input.uploadField {
 	font-family: Arial, Helvetica, sans-serif;
+	background-color: #ffffff;
+	border-top: 1px solid #D9D9D9;
+	border-left: 1px solid #D9D9D9;
+	border-bottom: 1px solid #D9D9D9;
+	border-right: 1px solid #D9D9D9;
 }
 
 div.separator {
