--- a/plugins/themes/eth/eth.css
+++ b/plugins/themes/eth/eth.css
@@ -132,21 +132,6 @@ input.uploadField {
 div.separator {
 	border-bottom: 2px solid #133a7b;
 }
-
-/**
- * Scheduled Conference Index
- */
-
-ul#sponsors {
-	list-style-type: none;
-	padding-left: 0;
-}
-
-ul#sponsors li {
-	float: left;
-	margin-right: 30px;
-	margin-bottom: 20px;
-}
  
 /**
  * Schedule
@@ -189,3 +174,26 @@ ul#sponsors li {
 	 margin-bottom: 10px;
 	 margin-top: 35px
  }
+ 
+ /**
+ * Sponsors
+ */
+ 
+ul#sponsors {
+	list-style-type: none;
+	padding-left: 0;
+}
+
+ul#sponsors li {
+	float: left;
+	width: 320px;
+	height: 82px;
+	margin-right: 30px;
+	margin-bottom: 10px;
+	margin-top: 10px;
+	line-height: 100px;
+}
+
+ul#sponsors a:hover {
+	border: none;
+}
