--- a/plugins/themes/eth/eth.css
+++ b/plugins/themes/eth/eth.css
@@ -29,6 +29,16 @@ body {
 	border-bottom: none;
 }
 
+#facebook {
+	float: right;
+	margin-top: -20px;
+	margin-right: -10px;
+}
+
+#facebook:hover {
+	border-bottom: none;
+}
+
 #body {
 	margin-top: -40px;
 }
